Split audience validation into two separate lists
Signed-off-by: achour94 <berrahmaachour@gmail.com>